--- a/dz/index.html
+++ b/dz/index.html
@@ -15,7 +15,7 @@
     <body>
         <br>
 <div>
-   <b class="border">Playing with borders to show Akash my progress</b> 
+   <b class="border">Playing with borders to show Akash my progress and check if Github works</b> 
 </div>
         <h1 style="background-color:Tomato;">Tomato color</h1>
         <h1 style="background-color:Orange;">Color of yellow snow</h1>
