--- a/dz/index.html
+++ b/dz/index.html
@@ -20,5 +20,5 @@
 <h1>
     Rezume
 </h1>
-<p><a href="Rezume springboard/index.html"> click me</a></p>
+<p><a href="Rezume springboard/"> click me</a></p>
     </body>
