--- a/dz/Rezume springboard/index.html
+++ b/dz/Rezume springboard/index.html
@@ -25,7 +25,7 @@
   <div id="London" class="tabcontent">
     <div class="wrapper"><!-- Main container -->
       <aside class="sidebar">
-        <img class="photo" src="/img/45219037_548815748904233_4950011454305599488_o.jpg" alt="My photo">                      
+        <img class="photo" src="/dz/Rezume springboard/img/2.jpg" alt="My photo">                      
         <div class="section Contacts-container"><!-- Contacts container -->
           <h3 class="section-title contact-title">Contacts</h3>
           <div>
