--- a/dz/index.html
+++ b/dz/index.html
@@ -21,4 +21,9 @@
     Rezume
 </h1>
 <p><a href="Rezume springboard/"> click me</a></p>
+<br>
+<h1>
+    Sliding box
+</h1>
+<p><a href="Sliding Boxes/index.html"> click me</a></p>
     </body>
