CSS task updated

--- a/dz/HTML and CSS/index.html
+++ b/dz/HTML and CSS/index.html
@@ -16,7 +16,12 @@
         <br>
 <div>
    <b class="border">Playing with borders to show Akash my progress and check if Github works</b> 
+   <br>
 </div>
+<br>
+<br>
+<h2>WoW! That interesting, if you put background color body <u>{background: linear-gradient(cyan, purple);} </u>like this- it will prioritize this colour above @media. So I put back regular color and you can resize window to see how background changes</h2>
+        <button class="HoverCatch">Catch me!</button>
         <h1 style="background-color:Tomato;">Tomato color</h1>
         <h1 style="background-color:Orange;">Color of yellow snow</h1>
         <h1 style="background-color:DodgerBlue;">DodgerBlue- is that a color name?!</h1>
