--- a/dz/Rezume springboard/index.html
+++ b/dz/Rezume springboard/index.html
@@ -24,6 +24,8 @@
 
   <div id="London" class="tabcontent">
     <div class="wrapper"><!-- Main container -->
+      <div class="layout">
+      <div class="side">
       <aside class="sidebar">
         <img class="photo" src="/dz/Rezume springboard/img/2.jpg" alt="My photo">                      
         <div class="section Contacts-container"><!-- Contacts container -->
@@ -98,6 +100,7 @@
           </ul>
         </div>
       </aside>
+        </div>
       <div class="info-container">
         <div class="section"><!-- about me container -->
           <h2 class="front-end">QA Engineer & Web Developer</h2>
@@ -162,6 +165,7 @@
         </div>
       </div>
     </div>
+  </div>
   </div>
 
   <div id="Paris" class="tabcontent">
