Ceasar code added

--- a/dz/index.html
+++ b/dz/index.html
@@ -26,4 +26,7 @@
     Sliding box
 </h1>
 <p><a href="Sliding Boxes/index.html"> click me</a></p>
+<br>
+<h1>Ceaser party</h1>
+<p><a href="Ceaser party/index.html"> click me</a></p>
     </body>
