Ceaser code comments added + task completed

--- a/dz/Ceaser party/index.html
+++ b/dz/Ceaser party/index.html
@@ -75,7 +75,7 @@ Number.isInteger(shiftValue);
 <p>The [Caesar Cipher](https://en.wikipedia.org/wiki/Caesar_cipher) is one of the earliest known and simplest ciphers. It is a type of substitution cipher where each letter in the plaintext is shifted a certain number of places down or up the alphabet.</p>
 <br>
 <br>
-<p><b>With some help of AI I've made a small script to transform input text using Ceasar code</b></p>
+<p><b>With some help of AI I've made a small script to transform input text using Ceasar code</b>r</p>
     <h2>Enter your text</h2>
 
     <textarea id="inputText" rows="5" cols="40" placeholder="Type here text for transformation"></textarea>
