--- a/dz/index.html
+++ b/dz/index.html
@@ -29,4 +29,10 @@
 <br>
 <h1>Ceaser party</h1>
 <p><a href="Ceaser party/index.html"> click me</a></p>
+<br>
+<h1>JavaScript practice</h1>
+<p><a href="JavaScript learning/index.html"> click me</a></p>
+<br>
+<h1>Secret Shift Value for Ceaser</h1>
+<p><a href="Secret Shift Value for Caesar/index.html"> click me</a></p>
     </body>
