--- a/dz/JavaScript learning/index.html
+++ b/dz/JavaScript learning/index.html
@@ -9,6 +9,18 @@
 <body>
     <h2>Output</h2>
     <textarea id="outputText" rows="5" cols="40" readonly></textarea>
-    <script src="script.js"></script>
+    <br>
+    <br>
+<h2>Type you password</h2>
+
+  <input type="text" id="passwordInput" placeholder="You password" />
+  <br>
+  <button onclick="checkAndSave()">Save Password</button>
+
+  <div id="result" onclick="showSavedMessage()">
+    And your password is: <span id="savedPassword">-</span>
+  </div>
+
+  <script src="script.js"></script>
 </body>
 </html>
